fixing breadcrumbs spacing - QGDS-48

--- a/src/components/banner/css/component.scss
+++ b/src/components/banner/css/component.scss
@@ -319,7 +319,7 @@
             }
             @include QLD-media(lg) {
                 @include QLD-space(padding-top, 3unit);
-                @include QLD-space(padding-bottom, 3unit);
+                @include QLD-space(padding-bottom, 4unit);
             }
         }
     }
@@ -481,7 +481,7 @@
 
     .qld__banner__breadcrumbs--desktop {
         @include QLD-media(md) {
-            @include QLD-space(margin-bottom, .5unit);
+            @include QLD-space(margin-bottom, 1.5unit);
             ~*:last-child {
                 @include QLD-space(margin-bottom, auto);
             }
